corrected navbar to position fixed with z-index

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,8 +3,8 @@
 }
 .footer-container {
   clear: both;
-  position: absolute;
-  // position: relative;
+  // position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 60px;
