--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,7 +18,7 @@ h3 {
   color: #18de8d;
 }
 
-.web-projects-container {
+#web-projects-container {
   a {
     color: #f4f4f4;
   }
@@ -49,7 +49,7 @@ h3 {
   }
 }
 
-.contact-container {
+#contact-container {
   a {
     color: #f4f4f4;
   }
